[ui] fix collapse

--- a/packages/ui/components/Collapse/index.styl
+++ b/packages/ui/components/Collapse/index.styl
@@ -2,15 +2,18 @@ _gutter = $UI.gutters.m
 _bgColor = $UI.colors.white
 
 .root
-  padding _gutter
   background-color _bgColor
   radius()
+
+.title
+  padding _gutter
+
   +web()
     &:hover
       cursor pointer
 
-.content
-  padding-top _gutter
-
 .titleText
   margin-right 1u
+
+.content
+  padding 0 _gutter _gutter
